# dockerized-cli

./: .bumpversion.cfg  .eslintrc.js  .gitignore  .travis.yml  404.html  LICENSE  Makefile  Pipfile  README.md  TODO.md  dockerized.py  index.html  index.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.py  sitemap.xml  tasks.py  test_dockerized.py  tsconfig.json
.github/workflows/: publish.yml  pythonpackage.yml
adapters/: dockercompose.py  environment.py  test_dockercompose.py
clients/: docker.py  dockercompose.py  test_dockercompose.py
commands/: clean.js  compose.js  exec.js  exec.py  init.js  init.py  shell.js  test_exec.py  test_init.py
core/commands/: clean.py  compose.py  dockercomposecommand.py  exec.py  init.py  shell.py  test_exec.py  test_init.py
dockerized/: version.py
dockerized/adapters/: dockercompose.py  environment.py  test_dockercompose.py
dockerized/core/: config.py  errors.py  project.py  test_project.py
dockerized/test/: __init__.py
dockerized/ui/: cli.py
docs/: index.html  index.md
docs/explanations/: how_dockerized_exec_works.md  why_use_dockerized.md
docs/how_to_guides/: cache_the_dockerized_docker_image.md  pass_environment_variables.md  provide_aws_credentials.md  use_with_vscode_remote_containers.md  utilize_package_managers_cache.md
docs/reference/: starter_kits.md
overrides/: main.html
search/: search_index.json
src/: index.js  index.ts
ui/: cli.py  test_cli.py
utils/: docker-compose.js  exec-in-docker-compose.js  find-base-dir.js  prettify-errors.js  read-config.js
(+114 files in other folders)
