[tool.poetry]
name = "dockerized"
version = "0.21.0"
description = "Seamlessly execute commands in a container"
authors = ["Itamar Ben-Zaken <benzaita@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.1.2"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
dockerized = 'dockerized.ui.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
